@@ -1,5 +1,7 @@
 package com.springboot.MyTodoList.security;
 
+import com.springboot.MyTodoList.service.UserContextService;
+import com.springboot.MyTodoList.model.User;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
@@ -9,6 +11,8 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -16,59 +20,73 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import javax.crypto.SecretKey;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
+import java.util.List;
 
-/**
- * Filtro de autenticación basado en JWT utilizado por Spring Security.
- *
- * Esta clase intercepta cada petición HTTP entrante para verificar
- * si contiene un token JWT válido en la cabecera {@code Authorization}.
- * Cuando el token es válido, se extrae la información del usuario
- * autenticado y se registra dentro del contexto de seguridad de Spring.
- *
- * El filtro utiliza la misma clave secreta configurada en Better Auth
- * para validar tokens firmados mediante el algoritmo HS256.
- *
- * Si el token es inválido, expiró o no puede ser verificado,
- * el contexto de seguridad es limpiado y la petición continúa sin
- * autenticación.
- */
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-    /** La clave secreta utilizada para validar los tokens JWT */
     @Value("${better-auth.secret}")
     private String secret;
 
-    /** Ejecuta la validacion del token JWT para cada solicitud HTTP */
+    private final UserContextService userContextService;
+
+    public JwtAuthenticationFilter(UserContextService userContextService) {
+        this.userContextService = userContextService;
+    }
+
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
+    ) throws ServletException, IOException {
 
         String authHeader = request.getHeader("Authorization");
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
+
             String token = authHeader.substring(7);
+
             try {
-                // Better Auth uses the secret directly to sign JWTs (HS256)
-                SecretKey key = Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
-                
+                // 1. Build signing key
+                SecretKey key = Keys.hmacShaKeyFor(
+                        secret.getBytes(StandardCharsets.UTF_8)
+                );
+
+                // 2. Parse JWT
                 Claims claims = Jwts.parser()
                         .verifyWith(key)
                         .build()
                         .parseSignedClaims(token)
                         .getPayload();
 
+                // 3. Extract identity
                 String email = claims.get("email", String.class);
-                // We can also extract custom fields like oracleUserId if added to JWT
-                
+
                 if (email != null) {
-                    UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                            email, null, Collections.emptyList());
+
+                    // 4. Load user from Oracle (source of truth)
+                    User user = userContextService.loadByEmail(email);
+
+                    // 5. Convert role → Spring authority
+                    List<GrantedAuthority> authorities = List.of(
+                            new SimpleGrantedAuthority("ROLE_" + user.getRole())
+                    );
+
+                    // 6. Build authentication object
+                    UsernamePasswordAuthenticationToken auth =
+                            new UsernamePasswordAuthenticationToken(
+                                    email,
+                                    null,
+                                    authorities
+                            );
+
+                    // 7. Set security context
                     SecurityContextHolder.getContext().setAuthentication(auth);
                 }
+
             } catch (Exception e) {
-                // Invalid token - clear context
+                // Invalid token OR user not found → treat as unauthenticated
                 SecurityContextHolder.clearContext();
             }
         }
